// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test assessable HOC display negative score 1`] = `
<body>
  <div>
    <svg>
      <g
        pointer-events="none"
        transform="translate(160 0)"
      >
        <circle
          class="sc-kpDqfm"
          fill="var(--apollon-gray, #e9ecef)"
          fill-opacity="0.8"
          r="16"
        />
        <svg
          class="sc-dhKdcB dMUpVV sc-cwHptR hAyyRD"
          height="24"
          viewBox="0 0 352 512"
          width="24"
          x="-12"
          xmlns="http://www.w3.org/2000/svg"
          y="-12"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          />
        </svg>
      </g>
      <text>
        Mock Component
      </text>
    </svg>
  </div>
</body>
`;

exports[`test assessable HOC display neutral score 1`] = `
<body>
  <div>
    <svg>
      <g
        pointer-events="none"
        transform="translate(160 0)"
      >
        <circle
          class="sc-kpDqfm"
          fill="var(--apollon-gray, #e9ecef)"
          fill-opacity="0.8"
          r="16"
        />
        <svg
          class="sc-dhKdcB dMUpVV sc-jEACwC kuynLZ"
          height="24"
          viewBox="0 0 192 512"
          width="24"
          x="-12"
          xmlns="http://www.w3.org/2000/svg"
          y="-12"
        >
          <path
            d="M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z"
          />
        </svg>
      </g>
      <text>
        Mock Component
      </text>
    </svg>
  </div>
</body>
`;

exports[`test assessable HOC display positive score 1`] = `
<body>
  <div>
    <svg>
      <g
        pointer-events="none"
        transform="translate(160 0)"
      >
        <circle
          class="sc-kpDqfm"
          fill="var(--apollon-gray, #e9ecef)"
          fill-opacity="0.8"
          r="16"
        />
        <svg
          class="sc-dhKdcB dMUpVV sc-jlZhew ksxHeD"
          height="24"
          viewBox="0 0 512 512"
          width="24"
          x="-12"
          xmlns="http://www.w3.org/2000/svg"
          y="-12"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          />
        </svg>
      </g>
      <text>
        Mock Component
      </text>
    </svg>
  </div>
</body>
`;

exports[`test assessable HOC display warning icon for incorrect assessment for the path 1`] = `
<body>
  <div>
    <svg>
      <text>
        Mock Component
      </text>
    </svg>
    <svg>
      <text>
        Mock Component
      </text>
    </svg>
    <svg>
      <g
        pointer-events="none"
        transform="translate(57.06749483200404 28.53374741600202)"
      >
        <circle
          class="sc-kpDqfm"
          fill="var(--apollon-gray, #e9ecef)"
          fill-opacity="0.8"
          r="16"
        />
        <polygon
          class="sc-dAlyuH"
          fill="var(--apollon-warning-yellow, #ffc800)"
          points="-10,8 0,-10 10,8"
        />
        <svg
          class="sc-dhKdcB dMUpVV sc-cPiKLX gCrFnU"
          height="12"
          viewBox="0 0 192 512"
          width="12"
          x="-6"
          xmlns="http://www.w3.org/2000/svg"
          y="-5"
        >
          <path
            d="M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z"
          />
        </svg>
      </g>
      <g
        pointer-events="none"
        transform="translate(100 50)"
      >
        <circle
          class="sc-kpDqfm"
          fill="var(--apollon-gray, #e9ecef)"
          fill-opacity="0.8"
          r="16"
        />
        <svg
          class="sc-dhKdcB dMUpVV sc-jlZhew ksxHeD"
          height="24"
          viewBox="0 0 512 512"
          width="24"
          x="-12"
          xmlns="http://www.w3.org/2000/svg"
          y="-12"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          />
        </svg>
      </g>
      <text>
        Mock Component
      </text>
    </svg>
  </div>
</body>
`;
